# nifty-banknifty-trading-bot

./: .env.example  .gitignore  AWS_LAMBDA_SETUP_GUIDE.md  DEPLOYMENT_SUMMARY.md  README.md  SECURITY_UPDATE.md  SETUP_CHECKLIST.md  SOPHISTICATED_DEPLOYMENT.md  SUPABASE_SETUP.md  TELEGRAM_BOT_HOSTING_GUIDE.md  check_deployment_fixes.py  cleanup-stack.sh  complete_oauth_flow.py  debug_bull_put_spread.py  diagnose_lambda_issues.py  kite_connect_setup_guide.md  launch_advanced_telegram_bot.py  main.py  market_dashboard_history.json  minimal_server.py  monitor_deployment.py  nifty-banknifty-trading-bot-prd.md  package-lock.json  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements-minimal.txt  requirements-railway.txt  requirements.txt  serverless.yml  simple_telegram_server.py  supabase.txt  supabase_schema.sql  telegram_bot_launcher.py  telegram_bot_server.py  test_adaptive_engine_full.py  test_adaptive_simple.py  test_adaptive_strategy_selection.py  test_adaptive_trading_engine.py  (+32 more)
.claude/: settings.local.json
.github/workflows/: deploy-lambda.yml  trading-bot.yml
config/: database_schema.sql
docs/: service-setup-guide.md
lambda_functions/: lambda_requirements.txt  requirements.txt  sophisticated_requirements.txt  telegram_helper.py
lambda_functions/main_trading/: lambda_function.py  lambda_handler.py  simple_handler.py  simple_lambda.py  sophisticated_handler.py
lambda_functions/src/core/: trading_engine.py
lambda_functions/src/integrations/: kite_connect_wrapper.py
lambda_functions/src/intelligence/: dashboard_simple.py  strategy_selector.py  trend_detector.py  volatility_analyzer.py
lambda_functions/src/strategies/: base_strategy.py  iron_condor.py
lambda_functions/src/strategies/aggressive/: __init__.py  long_straddle.py  long_strangle.py  short_strangle.py
lambda_functions/src/strategies/conservative/: __init__.py  bull_call_spread.py  butterfly_spread.py  covered_call.py
lambda_functions/src/utils/: constants.py  logger.py
lambda_functions/utils/: lambda_config.py
scripts/: health_check.py  init_database.py  setup_services.py
src/: main.py
src/core/: adaptive_trading_engine.py  trading_engine.py
src/integrations/: database.py  kite_connect_wrapper.py  telegram_bot.py  telegram_bot_original.py  telegram_trading_interface.py
src/intelligence/: __init__.py  dashboard.py  dynamic_allocator.py  market_regime.py  multi_timeframe.py  performance_attribution.py
src/strategies/: __init__.py  strategy_manager.py
src/strategies/aggressive/: short_straddle.py
src/strategies/conservative/: bear_call_spread.py  bear_put_spread.py  bull_put_spread.py
src/utils/: config.py  logger.py
tests/: test_config.py
